frontend/src/features/BurgerMenu/ui/BurgerMenu.module.scss
.wrapper {
  font-size: 14px;
  width: 100%;
  height: 100%;

  background-color: #fff;

  display: flex;
  flex-direction: column;

  padding-bottom: 30px;
  padding-inline: 20px;

  gap: 30px;
  justify-content: space-between;

  text-transform: uppercase;
}

.socials {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.items {
  display: flex;
  flex-direction: column;
  align-content: space-between;
  padding-right: 10px;

  overflow-y: auto;
}

.item {
  margin-top: 35px;
  display: flex;
  flex-direction: column;
  .parent {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }
}

.child {
  display: flex;
  flex-direction: column;
  gap: 30px;


  overflow: hidden;
  line-height: 0;
  height: 0;
  color: transparent;
  transition: line-height 0.2s, color 0.2s, height 0.2s;

  margin-left: 20px;

  &.open {
    line-height: 1.5;
    height: 100%;
    color: currentColor;
    margin-top: 35px;
    margin-bottom: 0px;
  }
}

.rotated {
  transition: all .2s;
  transform: rotate(90deg);
}

